--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "com.unity.collab-proxy": "2.0.4",
+    "com.unity.entities": "1.0.11",
+    "com.unity.entities.graphics": "1.0.11",
     "com.unity.feature.development": "1.0.1",
     "com.unity.render-pipelines.high-definition": "14.0.8",
     "com.unity.textmeshpro": "3.0.6",
