--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.feature.development": "1.0.1",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.logging": "1.0.16",
+    "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.physics": "1.0.16",
     "com.unity.render-pipelines.high-definition": "14.0.10",
     "com.unity.textmeshpro": "3.0.6",
