--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "com.unity.cinemachine": "3.1.2",
-    "com.unity.collab-proxy": "2.5.2",
+    "com.unity.collab-proxy": "2.6.0",
     "com.unity.entities": "1.3.8",
     "com.unity.entities.graphics": "1.3.2",
     "com.unity.feature.development": "1.0.2",
@@ -13,6 +13,8 @@
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.9.5",
+    "com.unity.xr.legacyinputhelpers": "2.1.11",
+    "com.unity.xr.management": "4.5.0",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
