--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,19 +1,20 @@
 {
   "dependencies": {
-    "com.unity.cinemachine": "3.1.2",
+    "com.unity.cinemachine": "3.1.3",
     "com.unity.collab-proxy": "2.6.0",
     "com.unity.entities": "1.3.9",
     "com.unity.entities.graphics": "1.3.2",
     "com.unity.feature.development": "1.0.2",
-    "com.unity.inputsystem": "1.11.2",
-    "com.unity.logging": "1.3.4",
+    "com.unity.ide.rider": "3.0.34",
+    "com.unity.inputsystem": "1.12.0",
+    "com.unity.logging": "1.3.5",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
-    "com.unity.physics": "1.3.8",
+    "com.unity.physics": "1.3.9",
     "com.unity.render-pipelines.high-definition": "17.0.3",
-    "com.unity.timeline": "1.8.7",
+    "com.unity.timeline": "1.8.8",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.9.5",
-    "com.unity.xr.legacyinputhelpers": "2.1.11",
+    "com.unity.xr.legacyinputhelpers": "2.1.12",
     "com.unity.xr.management": "4.5.0",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
