--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,17 +1,20 @@
 {
   "dependencies": {
+    "com.unity.ai.assistant": "1.0.0-pre.12",
+    "com.unity.ai.generators": "1.0.0-pre.18",
+    "com.unity.ai.inference": "2.3.0",
     "com.unity.cinemachine": "3.1.4",
     "com.unity.collab-proxy": "2.8.2",
     "com.unity.entities": "1.3.14",
     "com.unity.entities.graphics": "1.4.12",
     "com.unity.feature.development": "1.0.2",
     "com.unity.ide.rider": "3.0.36",
-    "com.unity.inputsystem": "1.14.1",
+    "com.unity.inputsystem": "1.14.2",
     "com.unity.logging": "1.3.10",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.physics": "1.3.14",
-    "com.unity.render-pipelines.high-definition": "17.1.0",
-    "com.unity.timeline": "1.8.8",
+    "com.unity.render-pipelines.high-definition": "17.2.0",
+    "com.unity.timeline": "1.8.9",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.9.8",
     "com.unity.xr.legacyinputhelpers": "2.1.12",
