--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,14 +1,15 @@
 {
   "dependencies": {
-    "com.unity.cinemachine": "3.1.4",
-    "com.unity.entities": "1.3.14",
-    "com.unity.entities.graphics": "1.4.15",
+    "com.unity.cinemachine": "3.1.5",
+    "com.unity.entities": "1.4.3",
+    "com.unity.entities.graphics": "1.4.16",
     "com.unity.feature.development": "1.0.2",
+    "com.unity.feature.ecs": "1.0.0",
     "com.unity.ide.rider": "3.0.38",
     "com.unity.inputsystem": "1.14.2",
     "com.unity.logging": "1.3.10",
-    "com.unity.nuget.newtonsoft-json": "3.2.1",
-    "com.unity.physics": "1.3.14",
+    "com.unity.nuget.newtonsoft-json": "3.2.2",
+    "com.unity.physics": "1.4.3",
     "com.unity.render-pipelines.high-definition": "17.2.0",
     "com.unity.timeline": "1.8.9",
     "com.unity.ugui": "2.0.0",
